@@ -1,4 +1,7 @@
 0.83.12
+  - Added menu item "Save logging as..." (under "Help"
+    -> "Debugging options") to save the current logging
+    content to the specified file. (Wengier)
   - FAT driver can now support PC-98 HDI images with
     partitions that start at any physical sector even
     if the start is not a multiple of the ratio of
